added skills and portfolio section

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <main>
 
         <section id="about">
+            
         </section>
 
         <section id="skills">
@@ -101,6 +102,140 @@
         </section>
 
     </main>
+    <section id="about">
+        <div id="my-image">
+              <img src="image/myImage.jpg">
+              
+        </div>
+        <br>
+          <div id="about-para">
+            <p>hfhfhf</p>
+        </div>
+    </section>
+    <section id="skills">
+        <h1 class="section-heading mb75px ">
+            <span>
+                <i class="fas fa-chalkboard-teacher"></i>
+            </span>
+            <span> SKILLS </span>
+        </h1>
+
+        <div class="skills-display">
+
+            <div class="skill-progress">
+                <div class="fifty-percent mb-blue">
+                    <div class="skill-name">
+                        <span> C++ </span>
+                    </div>
+                </div>
+            </div>
+            <div class="skill-progress">
+                <div class="eighty-five-percent mb-orange">
+                    <div class="skill-name">
+                        <span> HTML </span>
+                    </div>
+                </div>
+            </div>
+            <div class="skill-progress">
+                <div class="eighty-percent mb-light-purple">
+                    <div class="skill-name">
+                        <span> CSS </span>
+                    </div>
+                </div>
+            </div>
+            <div class="skill-progress">
+                <div class="fifty-percent mb-teal">
+                    <div class="skill-name">
+                        <span> Javascript </span>
+                    </div>
+                </div>
+            </div>
+            <div class="skill-progress">
+                <div class="fifty-percent mb-blue">
+                    <div class="skill-name">
+                        <span> NodeJs </span>
+                    </div>
+                </div>
+            </div>
+            <div class="skill-progress">
+                <div class="eighty-percent mb-light-purple">
+                    <div class="skill-name">
+                        <span> MongoDB </span>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+    <section id="portfolio">
+        <h1 class="section-heading mb75px">
+            <span>
+                <i class="fas fa-th-list"></i>
+            </span>
+            <span> Portfolio </span>
+        </h1>
+
+        <div id="portfolio-container">
+
+            <div class="portfolio-image-container">
+                <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000025_1550237330_codezen_2.png">
+                <div class="portfolio-details">
+                    <p>
+                        Write here basic details about the project.
+                    </p>
+                </div>
+
+            </div>
+            <div class="portfolio-image-container">
+                <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000025_1550237330_codezen_2.png">
+                <div class="portfolio-details">
+                    <p>
+                        Write here basic details about the project.
+                    </p>
+                </div>
+
+            </div>
+            <div class="portfolio-image-container">
+                <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000025_1550237330_codezen_2.png">
+                <div class="portfolio-details">
+                    <p>
+                        Write here basic details about the project.
+                    </p>
+                </div>
+
+            </div>
+            <div class="portfolio-image-container">
+                <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000024_1550237299_codezen.png">
+                <div class="portfolio-details">
+                    <p>
+                        Write here basic details about the project.
+                    </p>
+                </div>
+
+            </div>
+            <div class="portfolio-image-container">
+                <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000024_1550237299_codezen.png">
+                <div class="portfolio-details">
+                    <p>
+                        Write here basic details about the project.
+                    </p>
+                </div>
+
+            </div>
+            <div class="portfolio-image-container">
+                <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000024_1550237299_codezen.png">
+                <div class="portfolio-details">
+                    <p>
+                        Write here basic details about the project.
+                    </p>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+
 
 </body>
 </html>
