added animation to name

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>
+    <title >
         Aditya Raj
     </title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-
+    
+    <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+        </head>
 </head>
 <body>
     
@@ -54,7 +57,7 @@
 
         <div id="name-social-container">
             <div class="text-center">
-                <h1 id="my-name">
+                <h1 class="animated tada" id="my-name" >
                     ADITYA RAJ
                 </h1>
             </div>
